# LogicFortress

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-on-issue.yml  cmake-multi-platform.yml
Assets/: UniversalRenderPipelineGlobalSettings.asset
Assets/Plugins/: Core-Test-BitVec.cc  Core-Test-a.cpp  Core-Test-main.c  libCli-Test-lobby.c  libCli-Test-lobbyshow.c  testLobby  testWaitLinux
Assets/Plugins/x86_64/: Core-Test-BitVec.cc  Core-Test-a.cpp  Core-Test-main.c  libCli-Test-lobby.c  libCli-Test-lobbyshow.c  testLobby
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: Test.cs
Assets/Scripts/Core/: Player.auto.cs  Room.auto.cs
Assets/Scripts/Core/Net/: Cli.cs  RoomNetMgr.cs  Sock.cs  SockAddr.cs  SockAddrSz.auto.cs  Svr.cs
Assets/Scripts/Core/Plugin/: README.hint.md
Assets/Scripts/Test/: LobbyShow.cs  Port.auto.cs  SOImport.cs  SvrImport.cs  SvrTest.cs
Assets/Scripts/Wrap/: Room.cs
Assets/Scripts/Wrap/Net/: Cli.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Bare/: CMakeLists.txt  _.cmake
Bare/auto/: Dbg.h  Max.h  Player.h  Room.h
Bare/auto/cs/: Player.cs  Room.cs  SockAddrSz.cs  TestPort.cs
Bare/auto/test/: port.h
Bare/inc/: Character.h  Dbg.h  Max.auto.h  Patternise.h  Player.h  Player.imp.h  Req.h  Room.h  Room.imp.h  Sock.h  Sock.imp.h  Util.h  WaitWake.h
Bare/inc/Svr/: Main.h
Bare/src/Cli/: Room.c  Sock.c  SockAddr.c  Test.c
Bare/src/Svr/: Globals.c  Globals.cc  Main.c  Main.cc  MainTd.c  PlConn.h  Player.imp.h  ReqBuff.h  Room.c  Room.imp.h  RoomFlags.h  RoomPrivate.h  SvrMain.h  Test.c
Bare/test/: TestWaitLinux.c  client.c  main.c
Bare/test/units/: lobby.c  lobbyshow.c
ProjectSettings/: ProjectSettings.asset
